# rep-redux

./: .drawgraph.sh.swp  backtrack_orig.ps  backtrack_reduced.ps  complete_orig.ps  complete_reduced.ps  decision_script.m  killer1_orig.ps  killer1_reduced.ps  killer2_orig.ps  killer2_reduced.ps  killer_orig.ps  killer_reduced.ps  lowerbound.m  min_element.m  overcomplete_orig.ps  overcomplete_reduced.ps  paper_orig.ps  paper_reduced.ps  parity2_orig.ps  parity_orig.ps  parity_reduced.ps  plot_arc.m  random_orig.ps  random_reduced.ps  reduce_fsm.m  reduce_fsm_quick.m  simple_orig.ps  simple_reduced.ps  soft_trunc.m  split_orig.ps  split_reduced.ps  tree_to_fsm.m  wrap_orig.ps  wrap_reduced.ps
.vim/: .netrwhist  paste.vim
.vim/doc/: .omnicppcomplete.txt.swp
.vim/ftdetect/: fsm.vim
.vim/syntax/: fsm.vim
.vim/tags/: cpp
Formalization/: .formalization.tex.kate-swp  formalization.aux  formalization.backup  formalization.blg  formalization.dvi  formalization.tex.backup  formalization.tex~
Formalization/media/: clique_adj_large.xcf  complete-2.eps  complete_decision.eps  overcomplete-2.eps  overcomplete_decision.eps  random_1_gv.eps  random_2_gv.eps  random_adj.eps  random_alg-1.eps  random_alg-2.eps  random_cliques.eps  random_orig_gv.eps  random_orig_mat.eps  random_redu_gv.eps  random_redu_mat.eps  simple-1.eps  simple-2.eps  simple_decision.eps
README/: README  README.tex
cpp/: CMakeLists.txt  Makefile  rep-redux.sublime-project  rep-redux.sublime-workspace
cpp/data/: .drawgraph.sh.swp  drawgraph.sh
cpp/data/alberto/: alberto.dot  alberto.fsm  alberto.tree  alberto_tree.dot
cpp/data/demo/output/: alberto.dot  censi.dot  exact.dot  josh.dot
cpp/include/: decision_tree.h  fsm.h
cpp/src/: compatibility.cpp  decision_tree.cpp  emulation.cpp  fsm.cpp  graph_coloring.cpp  main.cpp  pathological_tree.cpp  poisson_fsm.cpp  reduce_alberto.cpp  reduce_censi.cpp  reduce_exact.cpp  reduce_greedy.cpp  reduce_josh.cpp  reduce_josh_exhaustive.cpp  rep-redux.sublime-workspace  state.cpp
cpp/stats/: dispredux.m  vert_hist.m
python/: decision_script.py  drawgraph.sh  lowerbound.py  max_element.py  min_element.py  plotFSM_graphviz.py  plot_arc.py  poissonDecisionTree.py  printFSM.py
python/GraphViz/: dot_to_graph.py  graph_to_dot.py  make_layout.py  my_setdiff.py
src/: .Makefile.swp  .decision_tree.cpp.swp  .decision_tree.h.swp  .fsm.cpp.swo  .fsm.cpp.swp  .fsm.h.swo  .fsm.h.swp  .main.cpp.swo  .main.cpp.swp  .poisson_fsm.cpp.swp  .state.cpp.swp  Makefile  decision_tree.cpp  decision_tree.h  fsm  fsm.cpp  fsm.c~  fsm.h  fsm.h~  main.cpp  out.fsm  state.cpp
workspace/: alberto_orig.ps  alberto_reduced.ps  decision_script.m  decision_script.m~  drawgraph.sh  fsm.py  max_element.m  plotFSM.m  plotFSM_graphviz.m  plotTree.m  poissonDecisionTree.m  printFSM.m  random_orig.ps  random_reduced.ps  random_reduced_alberto.ps  reduce_fsm_alberto.m  reduce_fsm_alberto.m~  soft_max.m  tree_force.m
workspace/GraphViz/: graph_draw.m  graph_to_dot.m
